# random-stuffs

./: Alchemist2.g4  DelaunayTriagulation.py  DelaunayTriangulation.cpp  TuringComplete.java  gamma.js  kleene-theorem-on-nfa.v  naive_subarray.cpp  timing_attack.js
image-classification/: .gitignore  CMakeLists.txt  build.sh  canny.cpp  common.cpp  common.hpp  constants.hpp  match.cpp  match.hpp  matrix.hpp  optical.cpp  otsu.cpp  otsu.hpp  rectangle.hpp
image-classification/scripts/: image.hpp  img2bin.cpp  ocra  ocra.cpp  ocra_no_template.cpp
